# jot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yml
.github/workflows/: audit.yml  general.yml
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_notes_table.sql  20240101000003_create_tag_table.sql  20260114235752_user_table.sql.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  note.rs  note_content.rs  note_title.rs  tag.rs  user.rs  user_email.rs  user_password.rs
src/middleware/: mod.rs  rate_limit.rs  request_id.rs  security.rs
src/routes/: login.rs  logout.rs  mod.rs
src/routes/home/: home.html
src/routes/notes/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/routes/tags/: mod.rs
src/routes/users/: me.rs  mod.rs  register.rs
src/session_state/: mod.rs
test/api/: helpers.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  search.rs  tag.rs  users.rs
tests/api/notes/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
