[package]
name = "jot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.11.0", features=["redis-session"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0",  features = ["cookies" ]}
anyhow = "1.0.100"
config = "0.15.19"
reqwest = "0.13.1"
secrecy = { version = "0.10.3", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"]}
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.44", features = ["log"]}
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"]}


