[package]
name = "jot"
version = "0.1.0"
edition = "2021"  # Changed from 2024 (doesn't exist yet)

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jot"

[dependencies]
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.100"
config = "0.15.19"
reqwest = { version = "0.13.1", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
validator = "0.19.0"
claims = "0.7"
thiserror = "2.0.18"
rand = "0.10.0"

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "~2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
